src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Unique_Id__c</fullName>
        <label>Address Unique Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Name_2__c</fullName>
        <label>Billing Account Name 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Block_Number__c</fullName>
        <formula>Address__r.Block_House_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Block Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Address_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Address Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City Code</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Attn. To Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address_Detail__c</fullName>
        <formula>Address__r.Block_House_Number__c &amp; &apos; &apos;  
&amp; Address__r.Street_Name__c &amp; &apos; &apos;
&amp;&quot;#&quot; 
&amp;( Address__r.Level_Number__c) &amp; &quot;-&quot; &amp; Address__r.Unit_Number__c &amp; &apos; &apos;
&amp; Address__r.Building_Name__c &amp; &apos; &apos;
&amp; Address__r.Postal_Code__r.SingPost_Building_Code__c &amp; &apos; &apos;
&amp; Address__r.Postal_Code__r.Name &amp; &apos; &apos;</formula>
        <label>Contact Address Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Contact Legacy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact_Recipient_Address__c</fullName>
        <label>Contact Recipient Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EditAddressFields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EditAddressFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Secondary__c</fullName>
        <label>Email(Secondary)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>User specified</description>
        <label>Email Address 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>User specified</description>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <formula>Address__r.Full_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDS_Contact_Id__c</fullName>
        <label>HDS Contact Id</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handphone_Number__c</fullName>
        <label>Handphone Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <description>User specified</description>
        <label>Home Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_Phone_display__c</fullName>
        <formula>HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_By__c</fullName>
        <label>Legacy Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MailingAddress1__c</fullName>
        <formula>Address__r.Block_House_Number__c &amp; &apos; &apos; 
&amp; Address__r.Street_Name__c &amp; &apos; &apos; &amp; &quot;#&quot; 
&amp;( Address__r.Level_Number__c) &amp; &quot;-&quot; &amp; Address__r.Unit_Number__c &amp; &apos; &apos; &amp; Address__r.Building_Name__c &amp; &apos; &apos; &amp; Address__r.Postal_Code__r.Name &amp; &apos; &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MailingAddress1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingAddress2__c</fullName>
        <formula>Address__r.Block_House_Number__c &amp; &apos; &apos; 
&amp; Address__r.Street_Name__c &amp; &apos; &apos; &amp; &quot;#&quot; 
&amp;( Address__r.Level_Number__c) &amp; &quot;-&quot; &amp; Address__r.Unit_Number__c &amp; &apos; &apos; &amp; Address__r.Building_Name__c &amp;  &apos;,&apos; &amp; &apos; &apos; &amp; Address__r.Country__r.Country_Name__c &amp; &apos; &apos; &amp; Address__r.Postal_Code__r.Name &amp; &apos; &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MailingAddress2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingAddress__c</fullName>
        <formula>Address__r.Block_House_Number__c &amp; &apos; &apos; 
&amp; Address__r.Street_Name__c &amp; &apos; &apos; &amp; 
&quot;#&quot; 
&amp;( Address__r.Level_Number__c) &amp; &quot;-&quot; &amp; Address__r.Unit_Number__c &amp; &apos; &apos; &amp;  Address__r.Building_Name__c &amp; &apos; &apos; &amp; Address__r.Postal_Code__r.Name &amp; &apos; &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MailingAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <formula>IF(Address__r.Block_House_Number__c != null, Address__r.Block_House_Number__c + &quot; &quot; + Street_Name__c + BR(), null) +
IF(Address__r.Level_Number__c != null, Address__r.Level_Number__c + &quot;-&quot; + Address__r.Unit_Number__c + BR(), null) +
IF(Address__r.Building_Name__c != null, Address__r.Building_Name__c + BR(), null) + 
IF(Address__r.Address_1__c != null, Address__r.Address_1__c + BR(), null)+ 
IF(Address__r.Address_2__c != null ,  Address__r.Address_2__c + BR(), null)+
IF(Address__r.Address_3__c != null, Address__r.Address_3__c + BR(), null)+
IF(Address__r.Address_4__c != null, Address__r.Address_4__c + BR(), null)+
IF(Address__r.Country__r.Country_Name__c != null, Address__r.Country__r.Country_Name__c + &quot; &quot; + Address__r.Postal_Code__r.Name, null)</formula>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number_2__c</fullName>
        <label>Mobile Number 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NRIC__c</fullName>
        <description>Batch-interfaced</description>
        <label>NRIC</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Delivery_Complaint_Cases_30_days__c</fullName>
        <description>Number of non delivery complaint cases in the past 30 days</description>
        <label>Non Delivery Complaint Cases (30 days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Delivery_Complaint_Cases_s__c</fullName>
        <label>Non Delivery Complaint Cases (16 wks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_goodwill__c</fullName>
        <description>Number of goodwill given in last 3 months.</description>
        <label>Number of goodwill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Extension__c</fullName>
        <label>Office Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Number__c</fullName>
        <label>Office Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Passport__c</fullName>
        <description>Batch-interfaced</description>
        <label>Passport</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Contact__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recipient_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recipient_Number_Show__c</fullName>
        <label>Recipient Number</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Number__c</fullName>
        <description>Recipient Number will be auto set by the system.</description>
        <label>Recipient Number</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS_Recipient_Account_Number__c</fullName>
        <label>SS Recipient Account Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS_Subscriber_Account_Number__c</fullName>
        <label>SS Subscriber Account Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <formula>Address__r.Street_Name__c</formula>
        <label>Street Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_Office_Extension__c</fullName>
        <label>Telephone Office Extension</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_Office__c</fullName>
        <label>Telephone Office</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_Residence__c</fullName>
        <label>Telephone Residence</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <formula>Address__r.Unit_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSS_Contact_Ref_No__c</fullName>
        <label>VSS Contact Ref No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSS_Login_ID__c</fullName>
        <label>VSS Login ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <formula>Account.Vendor_Code__c</formula>
        <label>Vendor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Communication_Preference__c</fullName>
        <label>Vendor Communication Preference</label>
        <picklist>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Group__c</fullName>
        <formula>Account.Vendor_Group__c</formula>
        <label>Vendor Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <formula>Address__r.Country__r.Zonal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__County__c</fullName>
        <label>County</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Vendor_Staffs</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Address_Unique_Id__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Vendor_Staff</value>
        </filters>
        <label>All Vendor Staffs</label>
    </listViews>
    <listViews>
        <fullName>VendorContact</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Address_Unique_Id__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Vendor_Contact</value>
        </filters>
        <label>VendorContact</label>
    </listViews>
    <listViews>
        <fullName>VendorMA</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Address_Unique_Id__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Vendor_MA</value>
        </filters>
        <filters>
            <field>Contact_Legacy_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Vendor/Mailing Agent Contacts</label>
    </listViews>
    <listViews>
        <fullName>ehContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Address_Unique_Id__c</columns>
        <columns>Zone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>contains</operation>
            <value>accenture</value>
        </filters>
        <label>ehContacts</label>
    </listViews>
    <recordTypes>
        <fullName>Billing_Contact</fullName>
        <active>false</active>
        <description>Record Type for Billing Contact</description>
        <label>Billing Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Contact</fullName>
        <active>true</active>
        <description>Combination of Recipient and Billing Contact</description>
        <label>Customer Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recipient_Contact</fullName>
        <active>false</active>
        <description>Record Type for Recipient Contact</description>
        <label>Recipient Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_Contact</fullName>
        <active>true</active>
        <description>Record type for Vendor Contact</description>
        <label>Vendor Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_MA</fullName>
        <active>true</active>
        <description>Record Type for Vendor/Mailing Agent Contacts</description>
        <label>Vendor-MA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_Staff</fullName>
        <active>true</active>
        <description>Record Type for Vendor Staff</description>
        <label>Vendor Staff</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_NRIC_field</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(REGEX(NRIC__c, &quot;^[S,F,T,G]\\d{7}[A-Z]$&quot;)),
LEN(NRIC__c) &gt; 0,
OR(
RecordType.Name = &quot;Customer Contact&quot;,
RecordType.Name = &quot;Vendor Contact&quot;,
RecordType.Name = &quot;Vendor-MA&quot;,
RecordType.Name = &quot;Vendor Staff&quot;
)
)</errorConditionFormula>
        <errorDisplayField>NRIC__c</errorDisplayField>
        <errorMessage>Invalid NRIC format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_1_phone_number_is_entered</fullName>
        <active>true</active>
        <description>At least 1 phone number is entered (either home phone, mobile, other phone or office number).</description>
        <errorConditionFormula>AND
( HomePhone__c = &quot;&quot;, HomePhone = &quot;&quot;, MobilePhone = &quot;&quot;, Mobile_Number__c = &quot;&quot;, Mobile_Number_2__c = &quot;&quot;, Office_Number__c = &quot;&quot;, 
OtherPhone = &quot;&quot;, Phone = &quot;&quot;, OR(RecordType.Name = &quot;Customer Contact&quot;))</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>At least 1 phone number should be entered (either home phone, mobile, other phone or office number).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_email_address2_format</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( Email_Secondary__c ,&quot;[a-zA-Z0-9._-]+@[a-zA-Z]+.[a-zA-Z]{2,4}&quot;))  &amp;&amp;  NOT(ISBLANK(Email_Secondary__c))</errorConditionFormula>
        <errorDisplayField>Email_Secondary__c</errorDisplayField>
        <errorMessage>Invalid email format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_email_address_format</fullName>
        <active>false</active>
        <description>Email should be correct.</description>
        <errorConditionFormula>NOT(REGEX( Email ,&quot;[a-zA-Z0-9._-]+@[a-zA-Z]+.[a-zA-Z]{2,4}&quot;))</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Invalid email format.</errorMessage>
    </validationRules>
</CustomObject>